name:          haskell-rl
version:       0.0.1
synopsis:      See readme.md
description:   See readme.md for description.
category:      project
homepage:      https://git.target.com/RedOptHaskell/haskell-rl/wiki
license:       BSD3
license-file:  LICENSE
author:        David Banas
maintainer:    David.Banas@target.com
copyright:     Copyright (c) 2018 Target Corp.; all rights reserved World wide.
build-type:    Simple
cabal-version: >=1.14

extra-source-files:
  readme.md
  index.html
  rentalcars.html
  rentalcars2.html
  stack.yaml
  other/lhs.css
  other/header.md

library
  default-language:
    Haskell2010
  ghc-options:
    -O2
    -funbox-strict-fields
    -Wall
  hs-source-dirs: src
  exposed-modules:
    RL.GPI
  build-depends:
    base >= 4.7 && < 5
    , protolude
    , finite-typelits
    , mtl
    , statistics
    , vector-sized
    , MemoTrie
    , list-extras
    , random
    , toolshed
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DataKinds,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    TypeFamilies,
    TypeOperators

executable haskell-rl-example
  default-language:
    Haskell2010
  ghc-options:
    -funbox-strict-fields
    -threaded
    -rtsopts
    -with-rtsopts=-N
  hs-source-dirs:
    app
  main-is:
    example.lhs
  build-depends:
    base >= 4.7 && < 5,
    protolude,
    optparse-generic
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    TypeFamilies,
    TypeOperators

executable tic-tac-toe
  default-language:
    Haskell2010
  ghc-options:
    -funbox-strict-fields
    -- -fforce-recomp
    -threaded
    -rtsopts
    -with-rtsopts=-N
  hs-source-dirs:
    app
  main-is:
    tictactoe.lhs
  build-depends:
    base >= 4.7 && < 5,
    protolude,
    optparse-generic,
    vector-sized,
    vector,
    finite-typelits,
    text,
    QuickCheck,
    monad-extras,
    random-shuffle,
    random,
    Chart,
    Chart-cairo
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    TypeFamilies,
    TypeOperators

-- executable rentalcars
--   default-language:
--     Haskell2010
--   ghc-options:
--     -O2
--     -funbox-strict-fields
--     -- -fforce-recomp
--     -threaded
--     -rtsopts
--     -with-rtsopts=-N
--   hs-source-dirs:
--     app
--   main-is:
--     rentalcars.lhs
--   build-depends:
--     base >= 4.7 && < 5,
--     protolude,
--     mtl,
--     optparse-generic,
--     vector-sized,
--     vector,
--     finite-typelits,
--     text,
--     QuickCheck,
--     monad-extras,
--     random-shuffle,
--     random,
--     Chart,
--     Chart-cairo,
--     haskell-rl
--   default-extensions:
--     NoImplicitPrelude,
--     UnicodeSyntax,
--     BangPatterns,
--     BinaryLiterals,
--     DeriveFoldable,
--     DeriveFunctor,
--     DeriveGeneric,
--     DeriveTraversable,
--     DisambiguateRecordFields,
--     EmptyCase,
--     FlexibleContexts,
--     FlexibleInstances,
--     FunctionalDependencies,
--     GADTSyntax,
--     InstanceSigs,
--     KindSignatures,
--     LambdaCase,
--     MonadComprehensions,
--     MultiParamTypeClasses,
--     MultiWayIf,
--     NegativeLiterals,
--     OverloadedStrings,
--     ParallelListComp,
--     PartialTypeSignatures,
--     PatternSynonyms,
--     RankNTypes,
--     RecordWildCards,
--     RecursiveDo,
--     ScopedTypeVariables,
--     TupleSections,
--     TypeFamilies,
--     TypeOperators

-- executable gambler
--   default-language:
--     Haskell2010
--   ghc-options:
--     -O2
--     -funbox-strict-fields
--     -threaded
--     -rtsopts
--     -with-rtsopts=-N
--   hs-source-dirs:
--     app
--   main-is:
--     gambler.lhs
--   build-depends:
--     base >= 4.7 && < 5
--     , protolude
--     , mtl
--     , optparse-generic
--     , vector-sized
--     -- , vector
--     , finite-typelits
--     , text
--     -- , QuickCheck
--     -- , monad-extras
--     -- , random-shuffle
--     -- , random
--     , Chart
--     , Chart-cairo
--     , haskell-rl

executable blackjack
  default-language:
    Haskell2010
  ghc-options:
    -O2
    -funbox-strict-fields
    -threaded
    -rtsopts
    -with-rtsopts=-N
  hs-source-dirs:
    app
  main-is:
    blackjack.lhs
  build-depends:
    base >= 4.7 && < 5
    , protolude
    , mtl
    , optparse-generic
    , vector-sized
    -- , vector
    , finite-typelits
    , text
    -- , QuickCheck
    , monad-extras
    , random-shuffle
    , Useful
    -- , random
    -- , Chart
    -- , Chart-cairo
    -- , haskell-rl

executable inventory
  default-language:
    Haskell2010
  ghc-options:
    -O2
    -funbox-strict-fields
    -threaded
    -rtsopts
    -with-rtsopts=-N
  hs-source-dirs:
    app
  main-is:
    inventory.lhs
  build-depends:
    base >= 4.7 && < 5
    , protolude
    , mtl
    , optparse-generic
    , vector-sized
    -- , vector
    , finite-typelits
    , text
    -- , QuickCheck
    , MemoTrie
    , monad-extras
    , random-shuffle
    , Useful
    -- , random
    , Chart
    , Chart-cairo
    , haskell-rl
    , statistics
    , list-extras
    , random

executable windygrid
  default-language:
    Haskell2010
  ghc-options:
    -O2
    -funbox-strict-fields
    -threaded
    -rtsopts
    -with-rtsopts=-N
  hs-source-dirs:
    app
  main-is:
    windygrid.lhs
  build-depends:
    base >= 4.7 && < 5
    , protolude
    , mtl
    , optparse-generic
    , vector-sized
    -- , vector
    , finite-typelits
    , text
    -- , QuickCheck
    , MemoTrie
    , monad-extras
    , random-shuffle
    , Useful
    -- , random
    , Chart
    , Chart-cairo
    , haskell-rl
    , statistics
    , random
    , toolshed

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    test.hs
  build-depends:
    base >= 4.7 && < 5,
    tasty,
    HUnit,
    tasty-hunit,
    QuickCheck,
    tasty-quickcheck,
    doctest,
    protolude
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    TypeFamilies,
    TypeOperators

source-repository head
  type:
    git
  location:
    https://git.target.com/RedOptHaskell/haskell-rl
